# SpaceShooter

./: CMakeLists.txt  README.md
Release/: Space_shooter  configuration
Release/data/: configuration
src/: audio.c  audio.h  bitmaps.c  bitmaps.h  clock.c  clock.h  collision.c  collision.h  gameplay.c  gameplay.h  gameplay_func.c  gameplay_func.h  list.c  list.h  main.c  main.h  main_func.c  main_func.h  menu.c  menu.h  menu_func.c  menu_func.h  texts.c  texts.h
